fixed min and max temp color problem (won't calculate bg color past -50 and 150)
Fixed input field on mobile being too narrow

--- a/style.css
+++ b/style.css
@@ -89,36 +89,38 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-@media only screen and (max-width:700px){
-  form{
-  width:100%;
+small{color:white; text-align: center; display:block; line-height: 1.5em; font-weight: 100;}
 
-  }
+@media only screen and (max-width:700px){
+
+  form{
+    width:100%;
+    }
 
   #tempContain h2{
- font-size:30px;
- padding-top:20px;
-}
+    font-size:30px;
+    padding-top:20px;
+  }
 
   #tempContain h4{
- font-size:18px;
-}
+    font-size:18px;
+  }
 
-#tempContain p{
- margin: 0px 0;
-}
+  #tempContain p{
+    margin: 0px 0;
+  }
 
 
-input{
-  width:100px;
-  height:80px;
-  font-size:66px;
-  padding:25px 0 5px;
-}
+  input{
+    width:100%;
+    height:80px;
+    font-size:66px;
+    padding:25px 0 5px;
+  }
 
-form{
+  form{
 
-  margin-top:10px;
+    margin-top:10px;
 
-}
+  }
 }
